feat: Implement server event handling for configuration and player sessions
- Added ConfigEvents class to handle server configuration reloads dynamically.
- Introduced PlayerEvents class to manage player login, logout, and dimension change events.
- Created ServerLifecycleEvents class to manage server lifecycle events including initialization, stopping, and tick updates.
- Refactored ChunkColorizer to improve readability and maintainability.
- Updated MapManager and RegenService for better handling of chunk rendering and regeneration processes.
- Enhanced SyncService to improve synchronization of player states and region updates.